system/kube-web-view/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-web-view
  annotations:
    elifesciences.org/default-project: ${cluster_name}
