system/kube-web-view/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-web-view
  labels:
    application: kube-web-view
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-web-view
  template:
    metadata:
      labels:
        application: kube-web-view
    spec:
      serviceAccountName: kube-web-view
      containers:
      - name: kube-web-view
        # see https://codeberg.org/hjacobs/kube-web-view/releases
        image: hjacobs/kube-web-view:23.8.0
        args:
        - --port=8080
        - --show-container-logs
        # uncomment the following line to unhide secret data
        # see also https://kube-web-view.readthedocs.io/en/latest/security.html
        # - "--show-secrets"
        # Which resources should be shown in the sidebar?
        - --sidebar-resource-types=Flux Sources=gitrepositories,helmrepositories,ocirepositories;Flux Deployments=kustomizations,helmreleases;Flux Automations=imagerepositories,imagepolicies,imageupdateautomations;Controllers=deployments,cronjobs;Pod Management=ingresses,services,pods,secrets,externalsecrets;Gateway=gateways,httproutes,services
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        resources:
          requests:
            cpu: 5m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
