system/kube-web-view/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-web-view
  labels:
    application: kube-web-view
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-elife-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "k8s-dashboard.${cluster_domain}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-web-view
                port:
                  number: 80
  tls:
    - secretName: kube-web-view-tls
      hosts:
        - "k8s-dashboard.${cluster_domain}"
